  reverse pages.
* Fix scan dialog if no devices found (again).
* Improve responsiveness with OCR output
* + 'Ignore duplex capabilities of scanner' preferences option. Closes feature
  request #109 (Retain 'Source Document' options on 'Scan Document' dialog)
* Fix running post-save hook on filenames with UTF-8.
  Closes bug #341 (Wrong character encoding at post-save hook)


2.6.3 (06.01.2020):

* Fallback to core PDF font if requested font cannot be loaded.
  Closes bug #336 (Saving to PDF never ends if empty font is selected)
* Detect GraphicsMagick in ImageMagick compatibility mode.
* Set program name to RDN ID to allow Gnome to add gscan2pdf as a favorite.
* Fix importing metadata from PDFs when timezone has format like GMT-14
* Update to Hungarian translation (thanks to csola)


2.6.2 (27.11.2019):

* Fix importing UTF-8 in DjVu text layer
* Fix crash importing metadata
* Add compatibility with combination of scanimage frontend and SANE 1.0.28
  Closes bug #335 (Tests fail with sane-backends 1.0.28)
* Update to Czech translation (thanks to Pavel Borecki)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.6.1 (12.11.2019):

* Fix crash importing metadata


2.6.0 (10.11.2019):

* Fix crash closing multiple message dialog via x-icon
  Closes bugs #333 (Segmentation fault when closing Messages window) and #334
  (Closing Scan Document dialog using close button causes gscan2pdf to exit)
* + --import-all option
* + new rotate 180° icon. Closes feature request #107 (Replace 180 degree icon)
* import metadata when opening PDF or DjVu files.
  Closes feature request #89 (Load document metadata at during open)
* Increment/decrement date on save dialog with +/- keys.
* Fixed reload-recursion bug triggered by unusual environment (reprotest)
* Update to French translation (thanks to Ltrlg)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.7 (11.10.2019):
